detect completed language

--- a/development.ini
+++ b/development.ini
@@ -14,7 +14,10 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = sqlite:///%(here)s/pdm_api.sqlite
+# sqlalchemy.url = sqlite:///%(here)s/pdm_api.sqlite
+sqlalchemy.url = mysql+mysqldb://user:password@host/db
+
+
 
 retry.attempts = 3
 
